--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -86,7 +86,7 @@
 }
 
 .featured-disc{
-  height: 58rem;
+  padding-bottom: 17rem;
   margin-top: 7rem;
   background-image: radial-gradient(
                   rgba($color-offWhite, 0.7),
@@ -98,6 +98,7 @@
   clip-path: polygon(0 10%, 50% 0, 100% 10%, 100% 100%, 50% 90%, 0 100%);
 
 }
+
 
 .featured-disc-head{
  transform: translateY(5rem);
